# TECFS_Disk

TECFS_Disk/: CMakeLists.txt  Data.xml  GestorDB.cpp  GestorDB.h  GestorVideos.cpp  GestorVideos.h  Singleton.cpp  Singleton.h  main.cpp
TECFS_Disk/DataStructures/: LinkedList.h  Node.h
